Fixed nav overflow & modal container flashing

--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -6,6 +6,7 @@ side-bar{
     border-right: 1px solid hsl(var(--grey-500-hsl) / 0.15);
     background-color: hsl(var(--grey-700-hsl) / 0.15);
     height: 100vh;
+    overflow-y: auto;
 
     header{
         color: var(--white);
